CHANGES


2019-02-10 (nb)

Testing scripts updated and tested.

Some refactoring/renaming, minor fixes, optimizations, removed unused functions.
- Some refactoring (renaming). Minor fixes.
- Code optimizations for size and speed.
- Removed unused functions.


2019-02-03 (nb)

Added "extern" functions where needed.

FIX: used wrong function - *_start/stop instead of *data_start/stop.


2019-01-27 (nb)

Minor source code reformatting.

Some functions moved to the new internal library - I2CSW - I2C Simple Writer,, other renamed. Testing scripts updated.


2018-12-26 (nb)

Functions from the ssd1306xledtx module now have the ssd1306tx_ prefix, names changed a little. Implemented ssd1306tx_init function.

Moved to a new ssd1306xledtx module, function to work with images.

Moved to a new ssd1306xledfx module, function to work with text.

Updated testing scripts. Source code maintenance. Updated TODO list.

Removed unused modules - local copy of "num2str", "ssd1306xled_cn" and "ssd1306xled_test_cn".

Source code maintenance. Changes in the texts.


2018-05-24 (nb)

Source code reorganizing, reformatting. Removed unused. Some optimizations.

Added new ssd1306xled_text1 module for testing text output.

Improved fonts handling. Moved ssd1306_string_font8x16xy to main library.

Added new ssd1306xled_text2 testing script.

Removed unused ssd1306xled8x16 files.

Switched to using the num2str from the tinyavrlib.

Added new ssd1306xled_nums1 testing script.

Added new ssd1306xled_imgs1 testing script.

Added new ssd1306_byte function that writes one vertical byte on the screen.

Updated ssd1306xled_test1 script to show simple tests.

Fixed bug in the ssd1306_byte function.


2018-05-23 (nb)

Added more comments in the source code.

Remove unused cpufreq.h file. More comments in the source code. Updated copyright and related info.

Improved Makefile. More comments in the source code. Updated copyright and related info.


2016-05-01 (nb)
