@@ -1,5 +1,10 @@
 TODO
 
+2019-04-27 (nb)
+
+- Fix library (probably the init seq.) to work with SSD1315 also. (DONE)
+
+
 2018-12-26 (nb)
 
 - Move font .h files to the app space, i.e. not in the library folder.
